fixed centering issue on iOS

--- a/app/static/CSS/mobile.css
+++ b/app/static/CSS/mobile.css
@@ -11,19 +11,32 @@ body, #right {
     overflow: hidden;
 }
 
+#header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 0 .5rem;
+    background-color: var(--main-color);
+    background-image: var(--background);
+}
+
 #settings-button {
-    width: 5vw;
-    margin: auto;
+    margin: auto 0;
+}
+
+select {
+    width: 100%;
+}
+
+form {
+    width: 100%;
     display: flex;
     justify-content: center;
-    /*position: absolute;*/
-    /*left: .5em;*/
-    /*top: 0.5em;*/
 }
 
 #plan_select, h1 {
     margin: 0;
-    width: 95vw;
+    /*max-width: 90vw;*/
     border: 0;
     font-size: 2.5rem;
     text-align: center;
@@ -32,18 +45,6 @@ body, #right {
     background-image: var(--background);
     color: white;
     border-radius: 0;
-}
-
-/*select {*/
-/*    filter: opacity(100%);*/
-/*}*/
-
-#header {
-    display: flex;
-    flex-direction: row;
-    background-color: var(--main-color);
-    background-image: var(--background);
-    justify-content: space-between;
 }
 
 a, p {
